--- a/css/gazpachuelo.css
+++ b/css/gazpachuelo.css
@@ -39,6 +39,16 @@
     padding: 2%;
     background-color: #F5DEB4;
  }
+ .center {
+  text-align: center;
+}
+
+#wrapper img {
+   text-align: center;
+   width: 50%;
+   height: 60%;
+   /* margin: 0 auto; */
+ }
  blockquote {
    padding: 1%;
    border-left: 1px solid black ;
@@ -47,15 +57,31 @@
 
  }
  ul{
-  /* para poner un tipo de lista distinto 
-  list-style-type: ; */
-  list-style-type: disc;
+  /* para poner un tipo de lista distinto */
+  list-style-image: url(../images/cuchara-removebg-preview.png);
+ }
+
+ ol li{
+  list-style: georgian;
  }
  blockquote:hover {
    background-color: #e3b5608c;
    color: aqua;
  }
  dt {
-    font-variant: small-caps;
-   font-weight: bold;
+  font-variant: small-caps;
+  font-weight: bold;
  }
+
+/* RESPONSIVIDAD */
+/* VAMOS A HACER QUE EL WRAPERS PASE EL 100% DEL VW */
+
+@media only screen and (width<700px) {
+  #wrapper{
+    width: 100%;
+  }
+  #wrapper img {
+    width: 100%;
+
+  } 
+}
