--- a/css/gazpachuelo.css
+++ b/css/gazpachuelo.css
@@ -52,7 +52,7 @@
    text-align: center;
    width: 50%;
    height: 60%;
-   /* margin: 0 auto; */
+   box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;
  }
  blockquote {
    padding: 1%;
@@ -68,6 +68,7 @@
 
  ol li{
   list-style: georgian;
+  margin: 1.2em 0;
  }
  blockquote:hover {
    background-color: #e3b5608c;
